# 6302_kurmakaevid

./: .gitignore  imgprocessing.py  main.py  pyproject.toml
lab_1/: loader.py
lab_2/: lab2_main.py
lab_3/: lab3_main.py
lab_4/: lab4_main.py
src/metetl/: cli.py  logging_config.json  logging_config.py  main.py
src/metetl/analysis/: aggregations.py
