[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metetl-kurmakaev-group6302"
version = "0.1.3" 
description = "MetETL Pipeline Laboratory Work"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "opencv-python",
    "aiohttp",
    "aiofiles"
]

[project.scripts]
metetl = "metetl.main:main"

[tool.setuptools.package-data]
metetl = ["*.json"]